# botebooks

./: README.md  makefile  pyproject.toml
notebooks/goverment_data/: petition_data.ipynb
