[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Tom Fynes <thomas.fynes@jet2.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.2.0"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
